package tp3;
public class PizzaGrecqueStyleBrest extends Pizza{

}
