package tp3;
public class PizzaGrecqueStyleStrasbourg extends Pizza {

}
