package tp3;
public class PizzaPoivronStyleBrest extends Pizza{

}
