package tp3;
public class PizzeriaBrest extends Pizzeria{
	public PizzeriaBrest(PizzaFactory pizzaFactory) {
        super(pizzaFactory);
    }

   
}
